--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,12 +22,17 @@ jobs:
 
     - name: Install requirement package
       run: 
-        sudo apt-get install -y libgl-dev
-        sudo apt-get install -y mesa-common-dev
-        sudo apt-get install -y libglu1-mesa-dev freeglut3-dev mesa-common-dev libgl1-mesa-dev
         sudo apt-get install -y libxi-dev build-essential libdbus-1-dev libfontconfig1-dev libfreetype6-dev libx11-dev
-        sudo apt-get install -y libqt4-dev zlib1g-dev libqt4-opengl-dev
-        sudo apt-get install -y libglew-dev libglfw3-dev
+        sudo apt-get install -y libgl-dev
+#        sudo apt-get install -y mesa-common-dev
+#        sudo apt-get install -y zlib1g-dev libqt4-opengl-dev
+#        sudo apt-get install -y libglew-dev libglfw3-dev
+        
+    - name: Install OpenGL package
+      run: 
+        sudo apt-get install -y libgl-dev
+        sudo apt-get install -y libglu1-mesa-dev freeglut3-dev mesa-common-dev libgl1-mesa-dev
+        sudo apt-get install -y libglew-dev libglfw3-dev        
         
     - name: Install FFMpeg package
       run: 
