--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,25 +22,26 @@ jobs:
 
     - name: Install requirement package
       run: 
-        sudo apt-get install -y libxi-dev build-essential libdbus-1-dev libfontconfig1-dev libfreetype6-dev libx11-dev
-        sudo apt-get install -y libgl-dev
+        sudo apt update
+        sudo apt install -y libxi-dev build-essential libdbus-1-dev libfontconfig1-dev libfreetype6-dev libx11-dev
+        sudo apt install -y libgl-dev
 #        sudo apt-get install -y mesa-common-dev
 #        sudo apt-get install -y zlib1g-dev libqt4-opengl-dev
 #        sudo apt-get install -y libglew-dev libglfw3-dev
         
     - name: Install OpenGL package
       run: 
-        sudo apt-get install -y libgl-dev
-        sudo apt-get install -y libglu1-mesa-dev freeglut3-dev mesa-common-dev libgl1-mesa-dev
-        sudo apt-get install -y libglew-dev libglfw3-dev        
+        sudo apt install -y libgl-dev
+        sudo apt install -y libglu1-mesa-dev freeglut3-dev mesa-common-dev libgl1-mesa-dev
+        sudo apt install -y libglew-dev libglfw3-dev        
         
     - name: Install FFMpeg package
       run: 
-        sudo apt-get install -y ffmpeg libavcodec-dev libavutil-dev libavformat-dev libavfilter-dev libswscale-dev libavdevice-dev libavdevice-dev libavresample-dev libpostproc-dev libswresample-dev libswscale-dev  
+        sudo apt install -y ffmpeg libavcodec-dev libavutil-dev libavformat-dev libavfilter-dev libswscale-dev libavdevice-dev libavdevice-dev libavresample-dev libpostproc-dev libswresample-dev libswscale-dev  
 
     - name: Install SDL2 package
       run: 
-        sudo apt-get install -y libsdl2-2.0 libsdl2-dev libsdl-dev libsdl-image1.2-dev
+        sudo apt install -y libsdl2-2.0 libsdl2-dev libsdl-dev libsdl-image1.2-dev
 
 
     - name: Configure CMake
